product description truncatewords updated to 15, some css added, serach field boarder fixed, base footer ir redone

--- a/static/css/album.css
+++ b/static/css/album.css
@@ -1,8 +1,4 @@
-body {
-    min-height: 75rem; /* Can be removed; just added for demo purposes */
-  }
-  
-  .navbar {
+.navbar {
     margin-bottom: 0;
   }
   
